@@ -1,3 +1,8 @@
+Thu Jun 10 00:22:51 2004  Soeren Sandmann  <sandmann@daimi.au.dk>
+
+	* gtk/gtkmenu.c: Revert the "drag select" part of
+	#141169. (#144011).
+
 Mon Jun  7 23:07:40 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkcombobox.c (gtk_combo_box_remeasure): Handle
